correcion de agregar gasto.

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,3 +2,10 @@
   max-height: 35vh;
   overflow: hidden;
 }
+.fab-icon{
+  position: fixed;
+  display: flex;
+  bottom: 5px;
+  right: 12px;
+  z-index: 999;
+}
